generated/checkers/gen/AllGen-Integer-Overflow-7a4b21250bf79eef26543d35bd390448646c536b/build_logs/syntax-repair-01/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBranchCondition(const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:138:27: warning: unused variable ‘CE’ [-Wunused-variable]
  138 |       if (const CallExpr *CE = getRoundupCallFromExpr(E, C)) {
      |                           ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:145:57: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::CallExpr*> >::lookup_type’ {aka ‘const clang::CallExpr* const*’} to ‘const clang::CallExpr*’ in initialization
  145 |         const CallExpr *Orig = State->get<RoundupSymMap>(Sym);
      |                                ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                         |
      |                                                         clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::CallExpr*> >::lookup_type {aka const clang::CallExpr* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:162:29: warning: unused variable ‘CE’ [-Wunused-variable]
  162 |         if (const CallExpr *CE = getRoundupCallFromExpr(LHS, C)) {
      |                             ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:169:59: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::CallExpr*> >::lookup_type’ {aka ‘const clang::CallExpr* const*’} to ‘const clang::CallExpr*’ in initialization
  169 |           const CallExpr *Orig = State->get<RoundupSymMap>(Sym);
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                           |
      |                                                           clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::CallExpr*> >::lookup_type {aka const clang::CallExpr* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:178:29: warning: unused variable ‘CE’ [-Wunused-variable]
  178 |         if (const CallExpr *CE = getRoundupCallFromExpr(RHS, C)) {
      |                             ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:184:59: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::CallExpr*> >::lookup_type’ {aka ‘const clang::CallExpr* const*’} to ‘const clang::CallExpr*’ in initialization
  184 |           const CallExpr *Orig = State->get<RoundupSymMap>(Sym);
      |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                           |
      |                                                           clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::SymExpr*, const clang::CallExpr*> >::lookup_type {aka const clang::CallExpr* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
